Created a table that tracks the volunteer hours.

--- a/index.html
+++ b/index.html
@@ -44,21 +44,41 @@
             <div class="input-container">
                 <label>Volunteer Experience Rating:</label>
                 <div class="ratings">
-                  <input type="radio" id="star1" name="rating" value="1"/>
-                  <label for="star1" class="fa fa-star"></label>
-                  <input type="radio" id="star2" name="rating" value="2"/>
-                  <label for="star2" class="fa fa-star"></label>
-                  <input type="radio" id="star3" name="rating" value="3"/>
-                  <label for="star3" class="fa fa-star"></label>
-                  <input type="radio" id="star4" name="rating" value="4"/>
-                  <label for="star4" class="fa fa-star"></label>
                   <input type="radio" id="star5" name="rating" value="5"/>
                   <label for="star5" class="fa fa-star"></label>
+                  <input type="radio" id="star4" name="rating" value="4"/>
+                  <label for="star4" class="fa fa-star"></label>
+                  <input type="radio" id="star3" name="rating" value="3"/>
+                  <label for="star3" class="fa fa-star"></label>
+                  <input type="radio" id="star2" name="rating" value="2"/>
+                  <label for="star2" class="fa fa-star"></label>
+                  <input type="radio" id="star1" name="rating" value="1"/>
+                  <label for="star1" class="fa fa-star"></label>
                 </div>
               </div>
 
-            <button type="submit">Submit</button>
+            <button id="submit-btn" type="submit">Submit</button>
         </form>
+
+        <section id="hoursTable">
+            <h2>Volunteer Hours</h2>
+            <table>
+                <tr>
+                    <th>Charity Name</th>
+                    <th>Hours Volunteered</th>
+                    <th>Date</th>
+                    <th>Experience Rating</th>
+                </tr>
+                <tbody>
+                </tbody>
+            </table>
+
+        </section>
+            
+        <section id="summary">
+            <h2>Volunteer Summary</h2>
+            <p id="totalHours">Total Hours Volunteered: 0</p>
+        </section>
     </main>
 
     <footer>
